--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-.vs 
+# Build directories
+/build/
+/bin/
+/lib/
+/x64/
+/CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+
+# Visual Studio files/folders
+.vs
+*.VC.db
+*.VC.VC.opendb
+*.suo
+*.user
+*.ipch
+*.pdb
+*.log
+*.obj
+*.tlog
+*.lastbuildstate
+*.sdf
+*.opensdf
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+
+# vcpkg build artifacts
+/vcpkg_installed/
+/.vcpkg-root
+
+# Mac specific
+*.DS_Store
+
+# Windows specific
+Thumbs.db
+
+# Other artifacts
+imgui.ini
